# pyswarms

./: .all-contributorsrc  .coveragerc  .flake8  .gitignore  .isort.cfg  .pypirc  .pyup.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Vagrantfile  azure-pipelines.yml  provisioner.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tests.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: logging.yaml
docs/: .gitignore  Makefile  conf.py  contributing.optimizer.rst  dev.api.rst  dev.loop.rst  dev.optimizer.rst  features.rst  index.rst  installation.rst  intro.rst  make.bat  tutorials.rst  usage.rst  usecases.rst
docs/_static/: theme_overrides.css
docs/api/: _pyswarms.backend.rst  _pyswarms.base.classes.rst  _pyswarms.optimizers.rst  _pyswarms.utils.rst  pyswarms.backend.rst  pyswarms.base.rst  pyswarms.discrete.rst  pyswarms.handlers.rst  pyswarms.rst  pyswarms.single.rst  pyswarms.swarms.rst  pyswarms.topology.rst  pyswarms.utils.decorators.rst  pyswarms.utils.environments.rst  pyswarms.utils.functions.rst  pyswarms.utils.plotters.rst  pyswarms.utils.reporter.rst  pyswarms.utils.search.rst
docs/assets/: inheritance.fls  (+10 more)
examples/: anaysis_of_simple_circuit.ipynb  basic_optimization.ipynb  basic_optimization_with_arguments.ipynb  custom_optimization_loop.ipynb  electric_circuit_problem.ipynb  feature_subset_selection.ipynb  how_pso_topologies_behave_in_pyswarms.ipynb  inverse_kinematics.ipynb  train_neural_network.ipynb  visualization.ipynb
paper/: paper.bib  paper.md
pyswarms/: __init__.py  cli.py
tests/: test_functions.py  test_pyswarms.py
(+162 files in other folders)
