[tool.poetry]
name = "pyswarms"
version = "1.3.1"
description = "A Python-based Particle Swarm Optimization (PSO) library."
authors = [
  "Lester James V. Miranda <ljvmiranda@gmail.com>",
  "Matthijs Wesseling <matthijs.wesseling@bigdatarepublic.nl>"
]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/Bladieblah/pyswarms"
keywords = ["pyswarms"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.11.2"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
attrs = "^23.1.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"
wheel = "^0.41.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.1"
flake8 = "^6.1.0"
black = "^23.9.1"
mypy = "^1.5.1"
mock = "^5.1.0"
pyyaml = "^6.0.1"
isort = "^5.12.0"
types-pyyaml = "^6.0.12.11"
types-tqdm = "^4.66.0.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^1.3.0"
nbsphinx = "^0.9.3"
ipython = "^8.15.0"
ipykernel = "^6.25.2"
nbstripout = "^0.6.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
